# python-open-meteo

./: README.md  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: codeql.yaml  linting.yaml  release.yaml  requirements.txt  tests.yaml  typing.yaml
examples/: air_quality.py  elevation.py  example.py  forcast.py  forecast.py  geocoding.py
src/open_meteo/: __init__.py  exceptions.py  models.py  open_meteo.py  util.py
tests/: __init__.py  test_open_meteo.py  test_zigbee2mqtt.py
