[tool.poetry]
name = "open-meteo"
version = "0.0.0"
description = "Asynchronous client for the Open-Meteo API."
authors = ["Franck Nijhof <opensource@frenck.dev>"]
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frenck/python-open-meteo"
repository = "https://github.com/frenck/python-open-meteo"
documentation = "https://github.com/frenck/python-open-meteo"
keywords = [
    "weather", "weather-api", "meteo", "openmeteo", "open-meteo", "api", "async", "client"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "open_meteo", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
pydantic = "^1.8.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.6"
bandit = "^1.7.4"
black = "^22.12"
blacken-docs = "^1.13.0"
codespell = "^2.2.2"
coverage = {version = "^7.1", extras = ["toml"]}
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-markdown = "^0.3.0"
flake8-simplify = "^0.19.3"
isort = "^5.12.0"
mypy = "^0.991"
pre-commit = "^3.0.3"
pre-commit-hooks = "^4.4.0"
pylint = "^2.16.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
vulture = "^2.7"
yamllint = "^1.29.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-open-meteo/issues"
Changelog = "https://github.com/frenck/python-open-meteo/releases"

[tool.black]
target-version = ['py37']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = ["open_meteo"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic"
]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
