[tool.poetry]
name = "open-meteo"
version = "0.0.0"
description = "Asynchronous client for the Open-Meteo API."
authors = ["Franck Nijhof <opensource@frenck.dev>"]
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frenck/python-open-meteo"
repository = "https://github.com/frenck/python-open-meteo"
documentation = "https://github.com/frenck/python-open-meteo"
keywords = [
    "weather", "weather-api", "meteo", "openmeteo", "open-meteo", "api", "async", "client"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "open_meteo", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = ">=3.8.1"
mashumaro = ">=3.10"
orjson = ">=3.9.8"
python = "^3.11"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-open-meteo/issues"
Changelog = "https://github.com/frenck/python-open-meteo/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = {version = "7.11.3", extras = ["toml"]}
mypy = "1.18.2"
pre-commit = "4.4.0"
pre-commit-hooks = "6.0.0"
pylint = "4.0.2"
pytest = "8.4.2"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
ruff = "0.14.4"
safety = "3.7.0"
syrupy = "5.0.0"
yamllint = "1.37.1"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["open_meteo"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["open_meteo"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "mashumaro.mixins.orjson.DataClassORJSONMixin",
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
